--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.26.0-2+csd2) UNRELEASED; urgency=medium
+
+  * Update Vcs fields for migration to https://salsa.debian.org/
+
+ -- Jeremy Bicha <jbicha@debian.org>  Fri, 19 Jan 2018 13:39:36 -0500
+
 evince (3.26.0-2+csd1) bionic; urgency=medium
 
   * Drop obsolete paches:
