--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,8 @@
-evince (3.26.0-2+csd2) UNRELEASED; urgency=medium
+evince (3.26.0-3) UNRELEASED; urgency=medium
 
   * Update Vcs fields for migration to https://salsa.debian.org/
 
  -- Jeremy Bicha <jbicha@debian.org>  Fri, 19 Jan 2018 13:39:36 -0500
-
-evince (3.26.0-2+csd1) bionic; urgency=medium
-
-  * Drop obsolete paches:
-    - traditional_menu_bar.patch
-    - unity_normal_titlebar.patch
-
- -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 18 Dec 2017 09:18:01 -0500
 
 evince (3.26.0-2) unstable; urgency=medium
 
