--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 evince (3.26.0-3) UNRELEASED; urgency=medium
 
   * Update Vcs fields for migration to https://salsa.debian.org/
+  * Bump debhelper compat to 11
 
  -- Jeremy Bicha <jbicha@debian.org>  Fri, 19 Jan 2018 13:39:36 -0500
 
