--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.26.0-3) UNRELEASED; urgency=medium
+evince (3.26.0-3) unstable; urgency=medium
 
   * Update Vcs fields for migration to https://salsa.debian.org/
   * Bump debhelper compat to 11
@@ -6,7 +6,7 @@ evince (3.26.0-3) UNRELEASED; urgency=medium
     - traditional_menu_bar.patch
     - unity_normal_titlebar.patch
 
- -- Jeremy Bicha <jbicha@debian.org>  Fri, 19 Jan 2018 13:39:36 -0500
+ -- Jeremy Bicha <jbicha@debian.org>  Wed, 24 Jan 2018 11:40:25 -0500
 
 evince (3.26.0-2) unstable; urgency=medium
 
