--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.27.91-1) UNRELEASED; urgency=medium
+
+  * New upstream development release
+
+ -- Jeremy Bicha <jbicha@debian.org>  Wed, 21 Feb 2018 18:13:12 -0500
+
 evince (3.26.0-3) unstable; urgency=medium
 
   * Update Vcs fields for migration to https://salsa.debian.org/
