--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-evince (3.27.91-1) UNRELEASED; urgency=medium
+evince (3.27.91-1) experimental; urgency=medium
 
   * New upstream development release
   * Bump minimum libarchive-dev to 3.2.0
   * Update install files for moved AppStream metadata
   * debian/libevdocument3-4.symbols: Add new symbols
 
- -- Jeremy Bicha <jbicha@debian.org>  Wed, 21 Feb 2018 18:13:12 -0500
+ -- Jeremy Bicha <jbicha@debian.org>  Wed, 21 Feb 2018 19:10:30 -0500
 
 evince (3.26.0-3) unstable; urgency=medium
 
