--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.27.92-1) UNRELEASED; urgency=medium
+
+  * New upstream release candidate
+  * Release to unstable
+
+ -- Jeremy Bicha <jbicha@debian.org>  Sat, 10 Mar 2018 21:17:04 -0500
+
 evince (3.27.91-1) experimental; urgency=medium
 
   * New upstream development release
