--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-evince (3.28.2-1) UNRELEASED; urgency=medium
+evince (3.28.2-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Jeremy Bicha <jbicha@debian.org>  Tue, 10 Apr 2018 13:22:22 -0400
+ -- Jeremy Bicha <jbicha@debian.org>  Tue, 10 Apr 2018 13:33:32 -0400
 
 evince (3.28.0-1) unstable; urgency=medium
 
