--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.29.91-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@debian.org>  Tue, 14 Aug 2018 09:39:57 -0400
+
 evince (3.28.2-1) unstable; urgency=medium
 
   * New upstream release
