--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+evince (3.29.91-2) experimental; urgency=medium
+
+  * Move addon AppStream metadata to the main package
+  * Drop obsolete Breaks/Replaces
+  * Cherry-pick 2 patches for Appstream metadata
+  * Cherry-pick 6 patches to fix icon issues
+  * Rename and refresh
+    Fix-path-of-the-libnautilus-extension-with-multi-arch.patch
+
+ -- Jeremy Bicha <jbicha@debian.org>  Tue, 21 Aug 2018 16:46:10 -0400
+
 evince (3.29.91-1) experimental; urgency=medium
 
   * New upstream development release
