--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.30.0-2) unstable; urgency=medium
+
+  * Re-enable postscript since ghostscript 9.22~dfsg-3 includes the recent
+    security fixes
+
+ -- Jeremy Bicha <jbicha@debian.org>  Tue, 04 Sep 2018 04:16:23 -0400
+
 evince (3.30.0-1) unstable; urgency=medium
 
   * New upstream release
