--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+evince (3.30.0-4) UNRELEASED; urgency=medium
+
+  [ Jamie Strandboge ]
+  * debian/apparmor-profile.abstraction, apparmor-profile: harden the profile
+    - add preamble for expectations of the profile
+    - evince{-previewer}: restrict access to DBus system bus (for compatiblity,
+      we allow full access to session, translation and accessibility buses):
+      + allow Get* to anything polkit allows
+      + allow talking to avahi (for printing)
+      + allow talking to colord (for printing)
+    - make the thumbnailer more restrictive (LP: #1794848) (Closes: #909849)
+      + remove evince abstraction and use only what is needed from it
+      + limit access to DBus session bus
+      + generally disallow writes
+      + allow reads for non-hidden files
+    - disallow access to the dirs of private files (LP: #1788929)
+    * debian/apparmor-profile: allow /bin/env ixr
+
+ -- Jeremy Bicha <jbicha@debian.org>  Mon, 08 Oct 2018 00:07:48 -0400
+
 evince (3.30.0-3) unstable; urgency=medium
 
   [ Olivier Tilloy ]
