--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-evince (3.30.0-4) UNRELEASED; urgency=medium
+evince (3.30.1-1) UNRELEASED; urgency=medium
 
   [ Jamie Strandboge ]
   * debian/apparmor-profile.abstraction, apparmor-profile: harden the profile
@@ -16,7 +16,10 @@ evince (3.30.0-4) UNRELEASED; urgency=medium
     - disallow access to the dirs of private files (LP: #1788929)
     * debian/apparmor-profile: allow /bin/env ixr
 
- -- Jeremy Bicha <jbicha@debian.org>  Mon, 08 Oct 2018 00:07:48 -0400
+  [ Jeremy Bicha ]
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@debian.org>  Mon, 08 Oct 2018 00:09:15 -0400
 
 evince (3.30.0-3) unstable; urgency=medium
 
