--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-evince (3.30.1-1) UNRELEASED; urgency=medium
+evince (3.30.1-1) unstable; urgency=medium
+
+  [ Jeremy Bicha ]
+  * New upstream release
 
   [ Jamie Strandboge ]
   * debian/apparmor-profile.abstraction, apparmor-profile: harden the profile
     - add preamble for expectations of the profile
-    - evince{-previewer}: restrict access to DBus system bus (for compatiblity,
-      we allow full access to session, translation and accessibility buses):
+    - evince{-previewer}: restrict access to DBus system bus (we allow full
+      access to session, translation and accessibility buses for compatibility)
       + allow Get* to anything polkit allows
       + allow talking to avahi (for printing)
       + allow talking to colord (for printing)
@@ -16,10 +19,7 @@ evince (3.30.1-1) UNRELEASED; urgency=medium
     - disallow access to the dirs of private files (LP: #1788929)
     * debian/apparmor-profile: allow /bin/env ixr
 
-  [ Jeremy Bicha ]
-  * New upstream release
-
- -- Jeremy Bicha <jbicha@debian.org>  Mon, 08 Oct 2018 00:09:15 -0400
+ -- Jeremy Bicha <jbicha@debian.org>  Mon, 08 Oct 2018 00:17:39 -0400
 
 evince (3.30.0-3) unstable; urgency=medium
 
