--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.30.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@debian.org>  Sat, 03 Nov 2018 17:26:33 -0400
+
 evince (3.30.1-1) unstable; urgency=medium
 
   [ Jeremy Bicha ]
