--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.30.2-3) UNRELEASED; urgency=medium
+
+  [ Jason Crain ]
+  * debian/apparmor-profile: Allow Illustrator .ai files (Closes: #920233)
+
+ -- Jeremy Bicha <jbicha@debian.org>  Tue, 22 Jan 2019 19:37:13 -0500
+
 evince (3.30.2-2) unstable; urgency=medium
 
   * Restore -Wl,-O1 to our LDFLAGS
