--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-evince (3.31.90-1) UNRELEASED; urgency=medium
+evince (3.31.90-1) experimental; urgency=medium
 
-  * New upstream release
+  * New upstream development release
+  * Drop Build-Depends on intltool
 
- -- Jeremy Bicha <jbicha@debian.org>  Mon, 04 Feb 2019 21:30:45 -0500
+ -- Jeremy Bicha <jbicha@debian.org>  Mon, 04 Feb 2019 21:48:27 -0500
 
 evince (3.30.2-3) unstable; urgency=medium
 
