--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.32.0-2) unstable; urgency=medium
+
+  * Team upload
+  * Upload to unstable
+
+ -- Andreas Henriksson <andreas@fatal.se>  Fri, 13 Sep 2019 15:46:15 +0200
+
 evince (3.32.0-1) experimental; urgency=medium
 
   * New upstream release
