--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.32.0-3) UNRELEASED; urgency=medium
+
+  * d/tests/libevince-dev: Add a superficial build test
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 17 Sep 2019 08:11:58 +0100
+
 evince (3.32.0-2) unstable; urgency=medium
 
   * Team upload
