--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ evince (3.32.0-3) UNRELEASED; urgency=medium
     Add patch from upstream to avoid displaying uninitialized memory if
     TIFFREADGBAImageOriented fails. Thanks to Leonidas S. Barbosa / Ubuntu.
     (Closes: #927820, CVE-2019-11459)
+  * Remove migration path from legacy -dbg package older than Debian 9
 
  -- Simon McVittie <smcv@debian.org>  Tue, 17 Sep 2019 08:41:09 +0100
 
