--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.34.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@debian.org>  Sun, 29 Sep 2019 15:39:36 -0400
+
 evince (3.32.0-3) unstable; urgency=medium
 
   * Team upload
