--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-evince (3.34.0-1) UNRELEASED; urgency=medium
+evince (3.34.0-1) unstable; urgency=medium
 
   * New upstream release
+  * Bump minimum libglib2.0-dev to 2.38.0
+  * Drop tiff-Handle-failure patch: Applied in new release
 
- -- Jeremy Bicha <jbicha@debian.org>  Sun, 29 Sep 2019 15:39:36 -0400
+ -- Jeremy Bicha <jbicha@debian.org>  Sun, 29 Sep 2019 15:59:58 -0400
 
 evince (3.32.0-3) unstable; urgency=medium
 
