--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.34.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@debian.org>  Mon, 07 Oct 2019 19:21:27 -0400
+
 evince (3.34.0-1) unstable; urgency=medium
 
   * New upstream release
