--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-evince (3.34.1-1) UNRELEASED; urgency=medium
+evince (3.34.1-1) unstable; urgency=medium
 
   * New upstream release
+  * debian/libevview3-3.symbols: Add new symbol
 
- -- Jeremy Bicha <jbicha@debian.org>  Mon, 07 Oct 2019 19:21:27 -0400
+ -- Jeremy Bicha <jbicha@debian.org>  Mon, 07 Oct 2019 19:28:39 -0400
 
 evince (3.34.0-1) unstable; urgency=medium
 
