--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.34.1-2) UNRELEASED; urgency=medium
+
+  * d/tests: Use correct compiler for proposed autopkgtest
+    cross-architecture testing support
+
+ -- Simon McVittie <smcv@debian.org>  Mon, 23 Dec 2019 12:29:25 +0000
+
 evince (3.34.1-1) unstable; urgency=medium
 
   * New upstream release
