--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-evince (3.34.1-2) UNRELEASED; urgency=medium
+evince (3.35.1-1) UNRELEASED; urgency=medium
 
+  [ Simon McVittie ]
   * d/tests: Use correct compiler for proposed autopkgtest
     cross-architecture testing support
   * d/tests: Remove unused ${srcdir}
 
- -- Simon McVittie <smcv@debian.org>  Mon, 23 Dec 2019 12:29:25 +0000
+  [ Sebastien Bacher ]
+  * New upstream release
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 06 Feb 2020 11:26:10 +0100
 
 evince (3.34.1-1) unstable; urgency=medium
 
