--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ evince (3.35.1-1) UNRELEASED; urgency=medium
 
   [ Sebastien Bacher ]
   * New upstream release
+  * debian/libevview3-3.symbols, debian/libevdocument3-4.symbols:
+    - updated for the new version
 
  -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 06 Feb 2020 11:26:10 +0100
 
