--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.35.92-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 02 Mar 2020 15:29:14 +0100
+
 evince (3.35.1-1) experimental; urgency=medium
 
   [ Simon McVittie ]
