--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.36.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Laurent Bigonville <bigon@debian.org>  Sun, 08 Mar 2020 19:04:21 +0100
+
 evince (3.35.92-1) experimental; urgency=medium
 
   * New upstream release
