--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ evince (3.36.0-1) UNRELEASED; urgency=medium
 
   * New upstream release
   * debian/control.in: Bump Standards-Version to 4.5.0 (no further changes)
+  * Move evinced executable to /usr/libexec
 
- -- Laurent Bigonville <bigon@debian.org>  Sun, 08 Mar 2020 19:06:15 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Sun, 08 Mar 2020 19:19:17 +0100
 
 evince (3.35.92-1) experimental; urgency=medium
 
