--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+evince (3.36.0-2) UNRELEASED; urgency=medium
+
+  * d/apparmor-profile.abstraction:
+    Allow running dash/bash with inherited AppArmor profile.
+    GDesktopAppInfo in GLib 2.64.x uses a one-line shell script to carry
+    out some setup when launching .desktop files, for example as a
+    URL handler. (Closes: #954013)
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 27 Mar 2020 10:53:24 +0000
+
 evince (3.36.0-1) unstable; urgency=medium
 
   * New upstream release
