upload to unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-evince (3.36.1-1) UNRELEASED; urgency=medium
+evince (3.36.1-1) unstable; urgency=medium
 
+  * New upstream release (lp: #1879475)
   * debian/rules:
     - override the dh_translations call to delete the outdated template
       which is provided by upstream (lp: #1877401)
-  * New upstream release
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 19 May 2020 12:08:14 +0200
+ -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 19 May 2020 16:23:45 +0200
 
 evince (3.36.0-2) unstable; urgency=medium
 
