--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.36.4-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 10 Jun 2020 15:32:34 +0200
+
 evince (3.36.1-1) unstable; urgency=medium
 
   * New upstream release (lp: #1879475)
