--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-evince (3.36.4-1) UNRELEASED; urgency=medium
+evince (3.36.4-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 10 Jun 2020 15:32:34 +0200
+ -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 10 Jun 2020 15:32:53 +0200
 
 evince (3.36.1-1) unstable; urgency=medium
 
