--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.36.5-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 11 Jun 2020 15:13:01 +0200
+
 evince (3.36.4-1) unstable; urgency=medium
 
   * New upstream release
