--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+evince (3.36.5-2) UNRELEASED; urgency=medium
+
+  * debian/patches/git_armhf_build.patch:
+    - cherry pick an upstream fix 'backend: Fix -Werror=format=2 on
+      dvi', fixes the build on armhf
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 12 Jun 2020 22:35:52 +0200
+
 evince (3.36.5-1) unstable; urgency=medium
 
   * New upstream release
