--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-evince (3.36.5-2) UNRELEASED; urgency=medium
+evince (3.36.5-2) unstable; urgency=medium
 
   * debian/patches/git_armhf_build.patch:
     - cherry pick an upstream fix 'backend: Fix -Werror=format=2 on
       dvi', fixes the build on armhf
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 12 Jun 2020 22:35:52 +0200
+ -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 15 Jun 2020 16:47:05 +0200
 
 evince (3.36.5-1) unstable; urgency=medium
 
