--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (3.37.90-2) UNRELEASED; urgency=medium
+
+  * debian/control.in:
+    - Build-Depends on meson
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 10 Sep 2020 10:35:24 +0200
+
 evince (3.37.90-1) experimental; urgency=medium
 
   * New upstream release
