--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-evince (3.37.90-2) UNRELEASED; urgency=medium
+evince (3.37.90-2) experimental; urgency=medium
 
   * debian/control.in:
     - Build-Depends on meson
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 10 Sep 2020 10:35:24 +0200
+ -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 10 Sep 2020 10:37:10 +0200
 
 evince (3.37.90-1) experimental; urgency=medium
 
