--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ evince (3.38.0-1) UNRELEASED; urgency=medium
   * New upstream release:
     - dvi: minus sign doesn't appear with mathdesign fonts
     - pdf: Reimplement 'de facto' tooltip with no ABI break
+  * debian/patches: Drop (applied upstream)
+  * debian/libevdocument3-4.symbols: Update symbols
 
- -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Mon, 14 Sep 2020 13:49:23 +0200
+ -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Mon, 14 Sep 2020 13:54:03 +0200
 
 evince (3.37.90-2) experimental; urgency=medium
 
@@ -1686,3 +1688,4 @@ evince (0.1.1-1) experimental; urgency=low
   * Initial Release.
 
  -- Sebastien Bacher <seb128@debian.org>  Mon, 24 Jan 2005 13:21:42 +0100
+
