--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (3.38.0-2) UNRELEASED; urgency=medium
+
+  * debian/rules: Enable all auto features (except t1lib)
+
+ -- Jeremy Bicha <jbicha@debian.org>  Tue, 29 Sep 2020 23:02:28 -0400
+
 evince (3.38.0-1) unstable; urgency=medium
 
   * New upstream release:
