--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-evince (3.38.0-2) UNRELEASED; urgency=medium
+evince (3.38.0-2) unstable; urgency=medium
+
+  * Team upload
 
   [ Jeremy Bicha ]
   * debian/rules: Enable all auto features (except t1lib).
@@ -7,13 +9,22 @@ evince (3.38.0-2) UNRELEASED; urgency=medium
   * Remove remnants of the Autotools build that are no longer necessary
 
   [ Simon McVittie ]
+  * d/p/Remove-ability-to-launch-actions.patch:
+    Add security hardening from upstream gnome-3-38 branch.
+    The PDF specification defines "Launch Action", which allows documents
+    to launch arbitrary applications. It appears that in practice this is
+    only used by malware. Evince never *deliberately* allowed arbitrary
+    code execution like this (even though the spec said it should), only
+    opening documents in external MIME handlers, but some MIME handlers
+    result in arbitrary code execution anyway.
   * Remove obsolete gnome-common build-dependency.
     This has been unnecessary ever since evince moved to the Meson build
     system. (Closes: #829976)
-  * Add patch from Chris Lamb to make the build reproducible
+  * d/p/Make-the-build-reproducible.patch:
+    Add patch from Chris Lamb to make the build reproducible
     (Closes: #970383)
 
- -- Simon McVittie <smcv@debian.org>  Tue, 13 Oct 2020 10:38:48 +0100
+ -- Simon McVittie <smcv@debian.org>  Tue, 13 Oct 2020 10:49:10 +0100
 
 evince (3.38.0-1) unstable; urgency=medium
 
