--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+evince (3.38.0-3) unstable; urgency=medium
+
+  * Team upload
+  * Preferentially build-depend on libgdk-pixbuf-2.0-dev.
+    We don't need the deprecated Xlib integration that is also pulled in
+    by the older libgdk-pixbuf2.0-dev package (see #974870).
+  * d/changelog: Trim trailing whitespace
+  * d/upstream/metadata: Add
+  * Standards-Version: 4.5.1 (no changes required)
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 24 Nov 2020 12:00:32 +0000
+
 evince (3.38.0-2) unstable; urgency=medium
 
   * Team upload
