--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-evince (3.38.0-4) UNRELEASED; urgency=medium
+evince (3.38.2-1) UNRELEASED; urgency=medium
 
   * d/watch: Only watch for stable-branch releases
   * Use upstream/3.38.x branch for upstream source.
     The first 3.39.x versions have already been released.
+  * New upstream release
 
- -- Simon McVittie <smcv@debian.org>  Tue, 16 Feb 2021 23:05:03 +0000
+ -- Simon McVittie <smcv@debian.org>  Tue, 16 Feb 2021 23:05:29 +0000
 
 evince (3.38.0-3) unstable; urgency=medium
 
