removed backported fix included in the new version

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ evince (3.39.2-1) UNRELEASED; urgency=medium
   * New upstream release
   * debian/control.in:
     - build with libhandy
+  * debian/patches/Make-the-build-reproducible.patch:
+    - removed, the issue is fixed in the new version
 
  -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 24 Feb 2021 13:41:12 +0100
 
