--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ evince (3.39.2-1) UNRELEASED; urgency=medium
   * New upstream release
   * debian/control.in:
     - build with libhandy
+  * debian/libevdocument3-4.symbols:
+    - updated symbols lists
   * debian/patches/Make-the-build-reproducible.patch:
     - removed, the issue is fixed in the new version
 
