--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-evince (40.1-1) UNRELEASED; urgency=medium
+evince (40.1-1) experimental; urgency=medium
 
   * New upstream release
   * debian/control.in: workaround gnome-pkg-tools gnome computation being
     broken with the new version scheme
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 08 Apr 2021 16:39:01 +0200
+ -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 08 Apr 2021 17:23:34 +0200
 
 evince (3.39.2-1) experimental; urgency=medium
 
