--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-evince (40.2-1) UNRELEASED; urgency=medium
+evince (40.2-1) experimental; urgency=medium
 
   * New upstream release
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 16 Jun 2021 13:41:35 +0200
+ -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 16 Jun 2021 13:57:10 +0200
 
 evince (40.1-1) experimental; urgency=medium
 
