--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (40.4-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Sun, 18 Jul 2021 11:36:56 -0400
+
 evince (40.2-1) experimental; urgency=medium
 
   * New upstream release
