--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (40.4-2) unstable; urgency=medium
+
+  * Release to unstable
+
+ -- Jeremy Bicha <jbicha@debian.org>  Thu, 19 Aug 2021 18:43:09 -0400
+
 evince (40.4-1) experimental; urgency=medium
 
   * New upstream release
