--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-evince (41.1-1) UNRELEASED; urgency=medium
+evince (41.1-1) unstable; urgency=medium
 
   * New upstream release
+  * debian/control.in: Bump minimum poppler to 0.86 & libtiff to 4
+  * Bump debhelper-compat to 13
+  * Bump Standards-Version to 4.6.0
+  * debian/rules: Never use internal synctex
+  * debian/rules: Simplify a bit
 
- -- Jeremy Bicha <jbicha@debian.org>  Sat, 09 Oct 2021 15:48:09 -0400
+ -- Jeremy Bicha <jbicha@debian.org>  Sat, 09 Oct 2021 16:11:27 -0400
 
 evince (40.4-2) unstable; urgency=medium
 
