--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-evince (41.2-2) UNRELEASED; urgency=medium
+evince (41.3-1) UNRELEASED; urgency=medium
 
+  [ Sebastien Bacher ]
   * debian/apparmor-profile:
     - use the exo abstraction rather than listing the binaries directly
       (lp: #1891338)
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 27 Oct 2021 12:08:25 +0200
+  [ Jeremy Bicha ]
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@debian.org>  Sun, 21 Nov 2021 13:00:19 -0500
 
 evince (41.2-1) unstable; urgency=medium
 
