--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+evince (41.3-2) unstable; urgency=medium
+
+  * Team upload
+  * Add patch from upstream to fix FTBFS with Meson 0.61
+    (Closes: #1005520)
+
+ -- Simon McVittie <smcv@debian.org>  Sun, 13 Feb 2022 14:16:52 +0000
+
 evince (41.3-1) unstable; urgency=medium
 
   [ Jeremy Bicha ]
