--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (41.3-3) unstable; urgency=medium
+
+  * Cherry-pick patches to support GNOME 42 dark theme preference
+  * debian/control.in: Bump minimum libhandy to 1.5.90
+
+ -- Jeremy Bicha <jeremy.bicha@canonical.com>  Wed, 16 Feb 2022 15:20:08 -0500
+
 evince (41.3-2) unstable; urgency=medium
 
   * Team upload
