--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (42~beta-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jeremy.bicha@canonical.com>  Thu, 03 Mar 2022 10:26:40 +0100
+
 evince (41.3-3) unstable; urgency=medium
 
   * Cherry-pick patches to support GNOME 42 dark theme preference
