--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (42~rc-1) UNRELEASED; urgency=medium
+
+  * New upstream release (LP: #1963241)
+
+ -- Jeremy Bicha <jeremy.bicha@canonical.com>  Tue, 08 Mar 2022 08:08:25 -0500
+
 evince (42~beta-1) experimental; urgency=medium
 
   * New upstream release (LP: #1963241)
