--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (42.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Fri, 18 Mar 2022 11:10:45 -0400
+
 evince (42~rc-1) experimental; urgency=medium
 
   * New upstream release (LP: #1963241)
