--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (42.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 21 Mar 2022 08:20:36 -0400
+
 evince (42.0-1) unstable; urgency=medium
 
   * New upstream release
