--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+evince (42.1-3) unstable; urgency=medium
+
+  * Cherry-pick commits from gnome-42 branch up to April 10:
+    - Translation updates
+    - Fix a user-after-free in the comics backend (LP: #1968903)
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Wed, 13 Apr 2022 12:43:04 -0400
+
 evince (42.1-2) unstable; urgency=medium
 
   * debian/control.in: Bump minimum libarchive to 3.6.0
