--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (42.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 18 Apr 2022 09:22:52 -0400
+
 evince (42.1-3) unstable; urgency=medium
 
   * Cherry-pick commits from gnome-42 branch up to April 10:
