--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-evince (42.2-1) UNRELEASED; urgency=medium
+evince (42.2-1) unstable; urgency=medium
 
   * New upstream release
+  * Drop all patches: applied in new release
 
- -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 18 Apr 2022 09:22:52 -0400
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 18 Apr 2022 09:23:50 -0400
 
 evince (42.1-3) unstable; urgency=medium
 
