--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (42.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release (LP: #1975489)
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 23 May 2022 08:23:39 -0400
+
 evince (42.2-1) unstable; urgency=medium
 
   * New upstream release
