--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-evince (42.3-1) UNRELEASED; urgency=medium
+evince (42.3-1) unstable; urgency=medium
 
   * New upstream release (LP: #1975489)
 
- -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 23 May 2022 08:23:39 -0400
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 23 May 2022 08:26:52 -0400
 
 evince (42.2-1) unstable; urgency=medium
 
