--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+evince (42.3-2) UNRELEASED; urgency=medium
+
+   * debian/apparmor-profile:
+    - authorize the new at-spi socket location (lp: #1978838)
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 15 Jun 2022 17:09:20 +0200
+
 evince (42.3-1) unstable; urgency=medium
 
   * New upstream release (LP: #1975489)
