--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-evince (42.3-2) UNRELEASED; urgency=medium
+evince (42.3-2) unstable; urgency=medium
 
+  [ Sebastien Bacher ]
    * debian/apparmor-profile:
-    - authorize the new at-spi socket location (lp: #1978838)
+    - authorize the new at-spi socket location (LP: #1978838)
 
- -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 15 Jun 2022 17:09:20 +0200
+  [ Jeremy Bicha ]
+  * Cherry-pick patch to fix build with gnome-desktop 43
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 28 Jul 2022 09:45:11 -0400
 
 evince (42.3-1) unstable; urgency=medium
 
