--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-evince (43~alpha-1) UNRELEASED; urgency=medium
+evince (43~alpha-1) unstable; urgency=medium
 
   * New upstream release
+  * Stop building Nautilus extension becuase
+    Nautilus 43 uses gtk4 but evince still uses gtk3
+  * debian/*.symbols: Add new symbols
+  * Drop patch: applied in new release
 
- -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 15 Aug 2022 14:20:59 -0400
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 15 Aug 2022 14:30:09 -0400
 
 evince (42.3-2) unstable; urgency=medium
 
