--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
-evince (43~alpha-2) UNRELEASED; urgency=medium
+evince (43.0-1) UNRELEASED; urgency=medium
 
   [ Simon McVittie ]
   * d/control.in: Drop alternative B-D on libgdk-pixbuf2.0-dev
 
- -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 19 Sep 2022 10:04:28 -0400
+  [ Jeremy Bicha ]
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 19 Sep 2022 10:05:12 -0400
 
 evince (43~alpha-1) unstable; urgency=medium
 
