--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-evince (43.0-1) UNRELEASED; urgency=medium
+evince (43.0-1) unstable; urgency=medium
+
+  [ Jeremy Bicha ]
+  * New upstream release
+  * debian/control.in: Bump minimum meson to 0.57.0
 
   [ Simon McVittie ]
   * d/control.in: Drop alternative B-D on libgdk-pixbuf2.0-dev
 
-  [ Jeremy Bicha ]
-  * New upstream release
-
- -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 19 Sep 2022 10:05:12 -0400
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 19 Sep 2022 10:08:47 -0400
 
 evince (43~alpha-1) unstable; urgency=medium
 
