--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (43.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Andreas Henriksson <andreas@fatal.se>  Sun, 04 Dec 2022 13:51:41 +0100
+
 evince (43.0-1) unstable; urgency=medium
 
   [ Jeremy Bicha ]
