--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (44.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 27 Mar 2023 06:54:27 -0400
+
 evince (43.1-2) unstable; urgency=medium
 
   [ Andrej Shadura ]
