--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (44.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Amin Bandali <bandali@ubuntu.com>  Wed, 21 Jun 2023 00:30:49 -0400
+
 evince (44.1-2) experimental; urgency=medium
 
   [ Georgia Garcia ]
