--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (44.3-2) unstable; urgency=medium
+
+  * Release to unstable
+
+ -- Jeremy Bícha <jbicha@ubuntu.com>  Fri, 21 Jul 2023 12:13:05 -0400
+
 evince (44.3-1) experimental; urgency=medium
 
   * Team upload
