--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (45~alpha-2) unstable; urgency=medium
+
+  * Release to unstable
+
+ -- Jeremy Bícha <jbicha@ubuntu.com>  Wed, 16 Aug 2023 20:07:41 -0400
+
 evince (45~alpha-1) experimental; urgency=medium
 
   * New upstream release
