--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+evince (45~rc-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jeremy Bícha <jbicha@ubuntu.com>  Tue, 05 Sep 2023 08:50:54 -0400
+
 evince (45~alpha-2) unstable; urgency=medium
 
   * Release to unstable
