--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-evince (45~rc-1) UNRELEASED; urgency=medium
+evince (45~rc-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Jeremy Bícha <jbicha@ubuntu.com>  Tue, 05 Sep 2023 08:50:54 -0400
+ -- Jeremy Bícha <jbicha@ubuntu.com>  Tue, 05 Sep 2023 08:51:08 -0400
 
 evince (45~alpha-2) unstable; urgency=medium
 
