--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-evince (45.0-1) UNRELEASED; urgency=medium
+evince (45.0-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Jeremy Bícha <jbicha@ubuntu.com>  Mon, 18 Sep 2023 18:16:52 -0400
+ -- Jeremy Bícha <jbicha@ubuntu.com>  Mon, 18 Sep 2023 18:17:11 -0400
 
 evince (45~rc-1) unstable; urgency=medium
 
